# django-timely

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml
timely/config/: asgi.py  settings.py  urls.py  wsgi.py
timely/django_timely/: admin.py  apps.py  views.py
timely/django_timely/migrations/: 0001_initial.py
timely/django_timely/models/: __init__.py  assets.py  bookings.py  events.py  resources.py
timely/django_timely/templates/django_timely/: base.html
